bug fix onboarding

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="carousel-item active">
             <div class="row">
                 <div class="col-12">
-                <div class="middle align-self-center text-center animated fadeIn" style="color:#56bac8; height: 100vh;">
+                <div class="middle align-self-center text-center animated fadeIn" style="color:#56bac8;">
                     <h1 class="font-weight-bold">Teal </h1>
                     <p>Brilliant things happen in calm minds.</p>
                 </div>
@@ -29,7 +29,7 @@
         <div class="carousel-item">
         <div class="row justify-content-center">
             <div class="col-5 middle">
-                <div class="align-self-center text-left animated slideInUp" style="color:#424242;">
+                <div class="align-self-center text-left" style="color:#424242;">
                     <h1 class="font-weight-bold">Keeping Track </h1>
                     <p>Measuring your stress level in real time.</p>
                 </div>
