--- a/html/main.html
+++ b/html/main.html
@@ -54,14 +54,14 @@
         <div class="dropdown-divider "></div>
         <div class="bg-light rounded">
             <h6 class="dropdown-header" style="color: black; font-size: medium">Synchronization</h6>
-        <div class="dropdown-item pr-1" style="font-size: small">
+        <div class="dropdown-item pr-1" style="font-size: small;background-color: white;color:black;">
             Wearable Device
             <label  class="switch align-middle">
             <input id="wearableSwitch" type="checkbox">
             <span class="slider round"></span>
         </label>
         </div>
-            <div class="dropdown-item pr-1 " style="font-size: small">
+            <div class="dropdown-item pr-1 " style="font-size: small;background-color: white;color:black;">
                 Social Media
                 <label  class="switch align-middle">
                     <input id="socialSwitch" type="checkbox">
@@ -125,18 +125,6 @@
                         <!--<button class="completed finishbtn"> undo </button>-->
                     </div>
                 </li>
-                <!--<li data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session"-->
-                    <!--data-date="December 4, 2018, 17:00pm" data-type="Online Chatting"-->
-                    <!--data-description="Quick online chatting session. Feedback on the new stress relief methods."-->
-                    <!--class="rounded_large list-group-item row ongoing task card flex-md-row mb-2 shadow-sm " id="new_task">-->
-                    <!--<div class="d-flex w-100 p-2  d-flex flex-column ">-->
-                        <!--<h6>Online Chatting</h6>-->
-                        <!--<h5 class="mb-1">December 4, 2018</h5>-->
-                        <!--<p>17:00pm</p>-->
-                        <!--&lt;!&ndash;<button class="ongoing finishbtn"> complete </button>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<button class="completed finishbtn"> undo </button>&ndash;&gt;-->
-                    <!--</div>-->
-                <!--</li>-->
                 <li data-toggle="modal" data-target="#exampleModal" data-pass="Past Session"
                     data-date="November 2, 2018, 13:00pm" data-type="Online Chatting"
                     data-description="Allen is doing better everyday. Glad to know that he becomes more productive at work."
@@ -145,16 +133,10 @@
                         <h6>Online Chatting</h6>
                         <h5 class="mb-1">November 2, 2018</h5>
                         <p>13:00pm</p>
-                        <!--<button class="ongoing finishbtn"> complete </button>-->
                         <!--<button class="completed finishbtn"> undo </button>-->
                     </div>
                 </li>
             </ul>
-        <!--<div class="d-flex rounded-circle justify-content-around ongoing ">-->
-            <!--<button class="btn rounded-circle add_btn shadow" id="refresh-btn">-->
-                <!--<i class="material-icons" style="margin-top:5px;">refresh</i>-->
-            <!--</button>-->
-        <!--</div>-->
         </div>
     <div class="mentalManage col-sm-6">
         <div  class="jumbotron bg-white shadow-sm mb-3" style="padding: 0.5rem 2rem;">
